--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="try_again">Try Again</string>
     <string name="retry">Retry</string>
     <string name="loading">Loading..</string>
+    <string name="comics">Comics</string>
 </resources>
