--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="retry">Retry</string>
     <string name="loading">Loading..</string>
     <string name="comics">Comics</string>
+    <string name="events">Events</string>
 </resources>
