--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="view_stories">View stories</string>
     <string name="stories">Stories</string>
     <string name="hasn_t_participated_in_any_stories">Hasn\'t participated in any stories..</string>
+    <string name="view_series">View series</string>
 </resources>
