--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="stories">Stories</string>
     <string name="hasn_t_participated_in_any_stories">Hasn\'t participated in any stories..</string>
     <string name="view_series">View series</string>
+    <string name="view">View</string>
 </resources>
