--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="hasn_t_participated_in_any_stories">Hasn\'t participated in any stories..</string>
     <string name="view_series">View series</string>
     <string name="view">View</string>
+    <string name="years">Years</string>
+    <string name="kg">Kg</string>
+    <string name="m">m</string>
 </resources>
